Update core workload to use prebuilt graph datasets.